--- a/index.html
+++ b/index.html
@@ -26,10 +26,29 @@
 
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
+  <img src="icon-192x192.png" />
+
+
+
+
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
-
+  <!-- Service Worker -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('./sw.js')
+      .then((reg) => {
+        // registration worked
+        console.log('Registration succeeded.');
+        console.log(reg);
+      }).catch((error) => {
+        // registration failed
+        console.log('Registration failed with ' + error);
+      });
+    }
+    </script>
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
