--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <img src="img/icon-192x192.png" />
+  <div class="hero">
+    <img id="test-img" src="img/icon-512x512.png" />
+  </div>
 
   <!-- Scripts -->
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
