--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
+  <title>Portfilio for @dboydgit</title>
+  <meta name="description" content="Portfolio site for Derryk Boyd - @dboytgit">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta property="og:title" content="Portfolio for @dboydgit">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="/">
+  <meta property="og:image" content="img/icon-512x512.png">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="img/icon-192x192.png">
@@ -26,8 +26,11 @@
 
   <!-- Add your site or application content here -->
   <div class="hero">
-    <img id="test-img" src="img/icon-512x512.png" />
+    <h1>Portfilio for @dboydgit</h1>
+    <img id="test-img" alt="profile" src="img/icon-512x512.png" />
   </div>
+
+  <h2>More content here...</h2>
 
   <!-- Scripts -->
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
