--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta property="og:url" content="/">
   <meta property="og:image" content="img/icon-512x512.png">
 
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="img/icon-192x192.png">
   <!-- Place favicon.ico in the root directory -->
