--- a/index.html
+++ b/index.html
@@ -26,13 +26,23 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <div class="hero">
+  <nav>
     <h1>Portfilio for @dboydgit</h1>
-    <img id="test-img" alt="profile" src="img/icon-512x512.png" />
+  </nav>
+  <div class="hero">
+    <div class='hero-text'>
+      <p>Hi there...</p>
+    </div>
+    <img id="hi-bitmoji" alt="profile-hi" src="img/DB-Hi-Bitmoji.png" />
+    <div class="hero-text"><p>Thanks for checking out my site.</p></div>
   </div>
 
-  <h2>More content here...</h2>
-  <h3>Add to github pages</h3>
+ <div class='todo'>
+    <h2>More content here...</h2>
+    <h3>Skills</h3>
+    <h3>Projects</h3>
+    <h3>Personal</h3>
+ </div>
 
   <!-- Scripts -->
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
