Add typewriter effect
Add site colors
Add social links in nav

--- a/index.html
+++ b/index.html
@@ -27,22 +27,33 @@
 
   <!-- Add your site or application content here -->
   <nav>
-    <h1>Portfilio for @dboydgit</h1>
+    <h1 class="nav-title">Derryk Boyd, P.Eng.</h1>
+    <div class="nav-links">
+      <a href="https://github.com/dboydgit/" target="_blank" rel="noopener noreferrer">
+        <img class="social-link" src="img/GitHub-Mark-64px.png" alt="social-linkedIn"/>
+      </a>
+      <a href="https://www.linkedin.com/in/derrykboyd/" target="_blank" rel="noopener noreferrer">
+        <img class="social-link" src="/img/LinkedIn-Mark.png" alt="social-linkedIn"/>
+      </a>
+    </div>
   </nav>
   <div class="hero">
-    <div class='hero-text'>
-      <p>Hi there...</p>
+    <div>
+      <p class='hero-text typewriter'>Hi there...</p>
     </div>
     <img id="hi-bitmoji" alt="profile-hi" src="img/DB-Hi-Bitmoji.png" />
-    <div class="hero-text"><p>Thanks for checking out my site.</p></div>
+    <div class="hero-text">
+      <p>Thanks for checking out my site.</p>
+      <p>Have a look at some of my work and learn a little about me below.</p>
+    </div>
   </div>
 
- <div class='todo'>
+  <div class='todo'>
     <h2>More content here...</h2>
     <h3>Skills</h3>
     <h3>Projects</h3>
     <h3>Personal</h3>
- </div>
+  </div>
 
   <!-- Scripts -->
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
