Add technologies section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Portfilio for @dboydgit</title>
+  <title>Personal Site for Derryk Boyd, @dboydgit</title>
   <meta name="description" content="Portfolio site for Derryk Boyd - @dboytgit">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -30,10 +30,10 @@
     <h1 class="nav-title">Derryk Boyd, P.Eng.</h1>
     <div class="nav-links">
       <a href="https://github.com/dboydgit/" target="_blank" rel="noopener noreferrer">
-        <img class="social-link" src="img/GitHub-Mark-64px.png" alt="social-linkedIn"/>
+        <img class="social-link" src="img/Logos/GitHub-Mark-64px.png" alt="social-github" />
       </a>
       <a href="https://www.linkedin.com/in/derrykboyd/" target="_blank" rel="noopener noreferrer">
-        <img class="social-link" src="/img/LinkedIn-Mark.png" alt="social-linkedIn"/>
+        <img class="social-link" src="/img/Logos/LinkedIn-Mark.png" alt="social-linkedIn" />
       </a>
     </div>
   </nav>
@@ -41,19 +41,102 @@
     <div>
       <p class='hero-text typewriter'>Hi there...</p>
     </div>
-    <img id="hi-bitmoji" alt="profile-hi" src="img/DB-Hi-Bitmoji.png" />
+    <img id="hi-bitmoji" alt="profile-hi" src="img/DB-Hi-Bitmoji.webp" src="img/DB-Hi-Bitmoji.png" />
     <div class="hero-text">
       <p>Thanks for checking out my site.</p>
       <p>Have a look at some of my work and learn a little about me below.</p>
     </div>
   </div>
 
-  <div class='todo'>
-    <h2>More content here...</h2>
-    <h3>Skills</h3>
-    <h3>Projects</h3>
-    <h3>Personal</h3>
+  <div class="skills">
+    <h2 class="section-heading">Technologies</h2>
+    <h3 class="sub-heading">Worked with in recent projects...</h3>
+    <div class="skill-grid">
+      <div class="skill">
+        <img src="img/Logos/HTML5.svg" alt="HTML5 Logo" class="sk-badge">
+        <span><abbr title="Hypertext Markup Language">HTML</abbr> 5</span>
+      </div>
+      <div class="skill">
+        <img src="img/Logos/CSS3.svg" alt="CSS3 Logo" class="sk-badge">
+        <span><abbr title="Cascading Style Sheets">CSS</abbr> 3</span>
+      </div>
+      <div class="skill">
+        <img src="img/Logos/JavaScript.svg" alt="JavaScript Logo" class="sk-badge">
+        <span>JavaScript</span>
+      </div>
+      <div class="skill">
+        <img src="img/Logos/React-icon.svg" alt="ReactJS Logo" class="sk-badge">
+        <span>React</span>
+      </div>
+      <div class="skill">
+        <img src="img/Logos/Git-Icon-Black.png" alt="Git Logo" class="sk-badge">
+        <span>Git</span>
+      </div>
+      <div class="skill">
+        <img src="img/Logos/GitHub-Mark-64px.png" alt="GitHub Logo" class="sk-badge">
+        <span>GitHub</span>
+      </div>
+      <div class="skill">
+        <div class="skill">
+          <img src="img/Logos/firebase-logo.svg" alt="Firebase Logo" class="sk-badge">
+          <span>Firebase</span>
+        </div>
+      </div>
+    </div>
+    <h3 class="sub-heading">Have also worked with...</h3>
+    <div class="skill-grid">
+      <div class="skill">
+        <div class="skill">
+          <img src="img/Logos/angular.svg" alt="Angular Logo" class="sk-badge">
+          <span>Angular</span>
+        </div>
+      </div>
+      <div class="skill">
+        <div class="skill">
+          <img src="img/Logos/Vue.js_Logo_2.svg" alt="Vue.js Logo" class="sk-badge">
+          <span>Vue.js</span>
+        </div>
+      </div>
+      <div class="skill">
+        <div class="skill">
+          <img src="img/Logos/Amazon_Web_Services_Logo.svg" alt="AWS Logo" class="sk-badge">
+          <span><abbr title="Amazon Web Services">AWS</abbr></span>
+        </div>
+      </div>
+      <div class="skill">
+        <div class="skill">
+          <img src="img/Logos/google-cloud.svg" alt="Google Cloud Logo" class="sk-badge">
+          <span>Google Cloud</span>
+        </div>
+      </div>
+      <div class="skill">
+        <div class="skill">
+          <img src="img/Logos/Node.js_logo.svg" alt="Node.js Logo" class="sk-badge">
+          <span>Node.js</span>
+        </div>
+      </div>
+      <div class="skill">
+        <div class="skill">
+          <img src="img/Logos/MongoDB_Logo.svg" alt="MongoDB Logo" class="sk-badge">
+        </div>
+      </div>
+      <div class="skill">
+        <div class="skill">
+          <img src="img/Logos/pouchdb.svg" alt="PouchDB Logo" class="sk-badge">
+          <span>PouchDB</span>
+        </div>
+      </div>
+      <div class="skill">
+        <div class="skill">
+          <img src="img/Logos/Python-logo-notext.svg" alt="Python Logo" class="sk-badge">
+          <span>Python</span>
+        </div>
+      </div>
+    </div>
   </div>
+  <h2 class="section-heading">Projects</h2>
+  <h2 class="section-heading">Education</h2>
+  <h2 class="section-heading">Personal</h2>
 
   <!-- Scripts -->
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
