Add GitLab and change widths

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </nav>
   <div class="hero">
     <div>
-      <p class='hero-text typewriter'>Hi there...</p>
+      <p class='hero-text typewriter'>Hi there 🙂</p>
     </div>
     <img id="hi-bitmoji" alt="profile-hi" src="img/DB-Hi-Bitmoji.webp" src="img/DB-Hi-Bitmoji.png" />
     <div class="hero-text">
@@ -107,6 +107,12 @@
         <div class="skill">
           <img src="img/Logos/google-cloud.svg" alt="Google Cloud Logo" class="sk-badge">
           <span>Google Cloud</span>
+        </div>
+      </div>
+      <div class="skill">
+        <div class="skill">
+          <img src="img/Logos/gitlab-icon-rgb.svg" alt="GitLab Logo" class="sk-badge">
+          <span>GitLab</span>
         </div>
       </div>
       <div class="skill">
