Add first two projects

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <meta name="theme-color" content="#7e57c2">
 </head>
@@ -48,99 +49,180 @@
     </div>
   </div>
 
-  <div class="skills">
-    <h2 class="section-heading">Technologies</h2>
-    <h3 class="sub-heading">Worked with in recent projects...</h3>
-    <div class="skill-grid">
+  <h2 class="section-heading">Technologies</h2>
+  <h3 class="sub-heading">Worked with in recent projects...</h3>
+  <div class="skill-grid">
+    <div class="skill">
+      <img src="img/Logos/HTML5.svg" alt="HTML5 Logo" class="sk-badge">
+      <span><abbr title="Hypertext Markup Language">HTML</abbr> 5</span>
+    </div>
+    <div class="skill">
+      <img src="img/Logos/CSS3.svg" alt="CSS3 Logo" class="sk-badge">
+      <span><abbr title="Cascading Style Sheets">CSS</abbr> 3</span>
+    </div>
+    <div class="skill">
+      <img src="img/Logos/JavaScript.svg" alt="JavaScript Logo" class="sk-badge">
+      <span>JavaScript</span>
+    </div>
+    <div class="skill">
+      <img src="img/Logos/React-icon.svg" alt="ReactJS Logo" class="sk-badge">
+      <span>React</span>
+    </div>
+    <div class="skill">
+      <img src="img/Logos/Git-Icon-Black.png" alt="Git Logo" class="sk-badge">
+      <span>Git</span>
+    </div>
+    <div class="skill">
+      <img src="img/Logos/GitHub-Mark-64px.png" alt="GitHub Logo" class="sk-badge">
+      <span>GitHub</span>
+    </div>
+    <div class="skill">
       <div class="skill">
-        <img src="img/Logos/HTML5.svg" alt="HTML5 Logo" class="sk-badge">
-        <span><abbr title="Hypertext Markup Language">HTML</abbr> 5</span>
-      </div>
-      <div class="skill">
-        <img src="img/Logos/CSS3.svg" alt="CSS3 Logo" class="sk-badge">
-        <span><abbr title="Cascading Style Sheets">CSS</abbr> 3</span>
-      </div>
-      <div class="skill">
-        <img src="img/Logos/JavaScript.svg" alt="JavaScript Logo" class="sk-badge">
-        <span>JavaScript</span>
-      </div>
-      <div class="skill">
-        <img src="img/Logos/React-icon.svg" alt="ReactJS Logo" class="sk-badge">
-        <span>React</span>
-      </div>
-      <div class="skill">
-        <img src="img/Logos/Git-Icon-Black.png" alt="Git Logo" class="sk-badge">
-        <span>Git</span>
-      </div>
-      <div class="skill">
-        <img src="img/Logos/GitHub-Mark-64px.png" alt="GitHub Logo" class="sk-badge">
-        <span>GitHub</span>
-      </div>
-      <div class="skill">
-        <div class="skill">
-          <img src="img/Logos/firebase-logo.svg" alt="Firebase Logo" class="sk-badge">
-          <span>Firebase</span>
-        </div>
+        <img src="img/Logos/firebase-logo.svg" alt="Firebase Logo" class="sk-badge">
+        <span>Firebase</span>
       </div>
     </div>
-    <h3 class="sub-heading">Have also worked with...</h3>
-    <div class="skill-grid">
+  </div>
+  <h3 class="sub-heading">Have also worked with...</h3>
+  <div class="skill-grid">
+    <div class="skill">
       <div class="skill">
-        <div class="skill">
-          <img src="img/Logos/angular.svg" alt="Angular Logo" class="sk-badge">
-          <span>Angular</span>
-        </div>
+        <img src="img/Logos/angular.svg" alt="Angular Logo" class="sk-badge">
+        <span>Angular</span>
       </div>
+    </div>
+    <div class="skill">
       <div class="skill">
-        <div class="skill">
-          <img src="img/Logos/Vue.js_Logo_2.svg" alt="Vue.js Logo" class="sk-badge">
-          <span>Vue.js</span>
-        </div>
+        <img src="img/Logos/Vue.js_Logo_2.svg" alt="Vue.js Logo" class="sk-badge">
+        <span>Vue.js</span>
       </div>
+    </div>
+    <div class="skill">
       <div class="skill">
-        <div class="skill">
-          <img src="img/Logos/Amazon_Web_Services_Logo.svg" alt="AWS Logo" class="sk-badge">
-          <span><abbr title="Amazon Web Services">AWS</abbr></span>
-        </div>
+        <img src="img/Logos/Amazon_Web_Services_Logo.svg" alt="AWS Logo" class="sk-badge">
+        <span><abbr title="Amazon Web Services">AWS</abbr></span>
       </div>
+    </div>
+    <div class="skill">
       <div class="skill">
-        <div class="skill">
-          <img src="img/Logos/google-cloud.svg" alt="Google Cloud Logo" class="sk-badge">
-          <span>Google Cloud</span>
-        </div>
+        <img src="img/Logos/google-cloud.svg" alt="Google Cloud Logo" class="sk-badge">
+        <span>Google Cloud</span>
       </div>
+    </div>
+    <div class="skill">
       <div class="skill">
-        <div class="skill">
-          <img src="img/Logos/gitlab-icon-rgb.svg" alt="GitLab Logo" class="sk-badge">
-          <span>GitLab</span>
-        </div>
+        <img src="img/Logos/gitlab-icon-rgb.svg" alt="GitLab Logo" class="sk-badge">
+        <span>GitLab</span>
       </div>
+    </div>
+    <div class="skill">
       <div class="skill">
-        <div class="skill">
-          <img src="img/Logos/Node.js_logo.svg" alt="Node.js Logo" class="sk-badge">
-          <span>Node.js</span>
-        </div>
+        <img src="img/Logos/Node.js_logo.svg" alt="Node.js Logo" class="sk-badge">
+        <span>Node.js</span>
       </div>
+    </div>
+    <div class="skill">
       <div class="skill">
-        <div class="skill">
-          <img src="img/Logos/MongoDB_Logo.svg" alt="MongoDB Logo" class="sk-badge">
-        </div>
+        <img src="img/Logos/MongoDB_Logo.svg" alt="MongoDB Logo" class="sk-badge">
       </div>
+    </div>
+    <div class="skill">
       <div class="skill">
-        <div class="skill">
-          <img src="img/Logos/pouchdb.svg" alt="PouchDB Logo" class="sk-badge">
-          <span>PouchDB</span>
-        </div>
+        <img src="img/Logos/pouchdb.svg" alt="PouchDB Logo" class="sk-badge">
+        <span>PouchDB</span>
       </div>
+    </div>
+    <div class="skill">
       <div class="skill">
-        <div class="skill">
-          <img src="img/Logos/Python-logo-notext.svg" alt="Python Logo" class="sk-badge">
-          <span>Python</span>
-        </div>
+        <img src="img/Logos/Python-logo-notext.svg" alt="Python Logo" class="sk-badge">
+        <span>Python</span>
       </div>
     </div>
   </div>
   <h2 class="section-heading">Projects</h2>
+  <div class="project-grid">
+    <div class="project card">
+      <div class="project-title">
+        <img class="project-logo" src="img/ProjectLogos/ult-stats-logo.svg" alt="ulti stats logo">
+        <h4 class="card-title">Ulti Stats</h4>
+      </div>
+      <div class="project-links">
+        <div class="project-link btn">
+          <a href="https://github.com/dboydgit/ultimate-stats" target="_blank" rel="noopener noreferrer">
+            <span>View Code</span>
+            <img class="btn-img" src="img/Logos/GitHub-Mark-Light-64px.png" alt="github mark light">
+          </a>
+        </div>
+        <div class="project-link btn">
+          <a href="https://ulti-stats.web.app/" target="_blank" rel="noopener noreferrer">
+            <span>Live Demo</span>
+            <span class="material-icons md-32 btn-img">open_in_new</span>
+          </a>
+        </div>
+      </div>
+      <div class="card-text">
+        <h5 class="text-med card-subtitle">Description</h5>
+        <p class="text-med project-description">
+          Ulti Stats is a progressive web application made for tracking statistics
+          during <a href="https://en.wikipedia.org/wiki/Ultimate_(sport)">Ultimate</a> games.
+          This was my most ambitious personal project to date, with a large and fast changing 
+          application state. Ulti Stats was built using React for the front end and Google Firebase for a
+          serverless backend.
+        </p>
+      </div>
+      <div class="project-tech">
+        <img src="img/Logos/React-icon.svg" alt="React Logo">
+        <img src="img/Logos/firebase-logo.svg" alt="Firebase Logo">
+        <img src="img/Logos/HTML5.svg" alt="HTML5 Logo">
+        <img src="img/Logos/CSS3.svg" alt="CSS3 Logo">
+        <img src="img/Logos/JavaScript.svg" alt="JavaScript Logo">
+      </div>
+    </div>
+    <div class="project card">
+      <div class="project-title">
+        <img class="project-logo" src="img/ProjectLogos/db-todo-logo.png" alt="db-todo logo">
+        <h4 class="card-title">dboydgit To-Do</h4>
+      </div>
+      <div class="project-links">
+        <div class="project-link btn">
+          <a href="https://github.com/dboydgit/db-todo" target="_blank" rel="noopener noreferrer">
+            <span>View Code</span>
+            <img class="btn-img" src="img/Logos/GitHub-Mark-Light-64px.png" alt="github mark light">
+          </a>
+        </div>
+        <div class="project-link btn">
+          <a href="https://dboydgit-to-do.web.app/" target="_blank" rel="noopener noreferrer">
+            <span>Live Demo</span>
+            <span class="material-icons md-32 btn-img">open_in_new</span>
+          </a>
+        </div>
+      </div>
+      <div class="card-text">
+        <h5 class="text-med card-subtitle">Description</h5>
+        <p class="text-med project-description">
+          This progressive web application is my version of a modern To-Do list app. This 
+          web app syncs instantly between devices using a Google Firestore database. 
+          Originally built with PouchDB and CouchDB for syncing 
+          and NodeJS with Express for authentication. I recently refactored the app to 
+          work with Google Firebase for database and authentication.
+        </p>
+      </div>
+      <div class="project-tech">
+        <img src="img/Logos/React-icon.svg" alt="React Logo">
+        <img src="img/Logos/firebase-logo.svg" alt="Firebase Logo">
+        <img src="img/Logos/HTML5.svg" alt="HTML5 Logo">
+        <img src="img/Logos/CSS3.svg" alt="CSS3 Logo">
+        <img src="img/Logos/JavaScript.svg" alt="JavaScript Logo">
+        <img src="img/Logos/pouchdb.svg" alt="PouchDB Logo">
+      </div>
+    </div>
+    <div class="project card">
+      <p>Project3</p>
+    </div>
+    <div class="project card">
+      <p>Project4</p>
+    </div>
+  </div>
   <h2 class="section-heading">Education</h2>
   <h2 class="section-heading">Personal</h2>
 
