Fix Hero layout

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           during <a href="https://en.wikipedia.org/wiki/Ultimate_(sport)">Ultimate</a> games.
           This was my most ambitious personal project to date, with a large and fast changing 
           application state. Ulti Stats was built using React for the front end and Google Firebase for a
-          serverless backend.
+          serverless backend and hosting.
         </p>
       </div>
       <div class="project-tech">
@@ -204,7 +204,7 @@
           web app syncs instantly between devices using a Google Firestore database. 
           Originally built with PouchDB and CouchDB for syncing 
           and NodeJS with Express for authentication. I recently refactored the app to 
-          work with Google Firebase for database and authentication.
+          work with Google Firebase for database, authentication, and hosting.
         </p>
       </div>
       <div class="project-tech">
