Update open graph data

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Personal Site for Derryk Boyd, @dboydgit</title>
-  <meta name="description" content="Portfolio site for Derryk Boyd - @dboytgit">
+  <meta name="description" content="Personal site for Derryk Boyd - @dboytgit">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="Portfolio for @dboydgit">
+  <meta property="og:title" content="Personal Site for @dboydgit">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="/">
+  <meta property="og:url" content="https://dboydgit.github.io/portfolio/">
   <meta property="og:image" content="img/icon-512x512.png">
 
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
