Complete Projects section
Update skills section
Add script to copy some static files for build

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="skill">
       <div class="skill">
         <img src="img/Logos/angular.svg" alt="Angular Logo" class="sk-badge">
-        <span>Angular</span>
+        <span>AngularJS</span>
       </div>
     </div>
     <div class="skill">
@@ -136,6 +136,23 @@
       <div class="skill">
         <img src="img/Logos/Python-logo-notext.svg" alt="Python Logo" class="sk-badge">
         <span>Python</span>
+      </div>
+    </div>
+    <div class="skill">
+      <div class="skill">
+        <img src="img/Logos/Docker-logo.svg" alt="Docker Logo" class="sk-badge">
+      </div>
+    </div>
+    <div class="skill">
+      <div class="skill">
+        <img src="img/Logos/Wordpress-Logo.svg" alt="WordPress Logo" class="sk-badge">
+        <span>WordPress</span>
+      </div>
+    </div>
+    <div class="skill">
+      <div class="skill">
+        <img src="img/Logos/Sass_Logo_Color.svg" alt="Sass Logo" class="sk-badge">
+        <span><abbr title="Syntactically Awesome Style Sheets">Sass</abbr></span>
       </div>
     </div>
   </div>
@@ -217,10 +234,79 @@
       </div>
     </div>
     <div class="project card">
-      <p>Project3</p>
+      <div class="project-title">
+        <img class="project-logo" src="img/ProjectLogos/dice-score-logo.png" alt="dice-score logo">
+        <h4 class="card-title">Dice Scoresheets</h4>
+      </div>
+      <div class="project-links">
+        <div class="project-link btn">
+          <a href="https://github.com/dboydgit/dice-scoresheets" target="_blank" rel="noopener noreferrer">
+            <span>View Code</span>
+            <img class="btn-img" src="img/Logos/GitHub-Mark-Light-64px.png" alt="github mark light">
+          </a>
+        </div>
+        <div class="project-link btn">
+          <a href="https://dboydgit.github.io/dice-scoresheets/" target="_blank" rel="noopener noreferrer">
+            <span>Live Demo</span>
+            <span class="material-icons md-24 btn-img">open_in_new</span>
+          </a>
+        </div>
+      </div>
+      <div class="card-text">
+        <h5 class="text-med card-subtitle">Description</h5>
+        <p class="text-med project-description">
+          This web app was my first time working with React. The app is a simple 
+          <a href="https://en.wikipedia.org/wiki/Yahtzee">Yahtzee</a> scoresheet for up to 8 players. I also integrated some elements of
+          the material design framework <a href="https://material-ui.com/">Material-UI</a>.
+        </p>
+      </div>
+      <div class="project-tech">
+        <img src="img/Logos/React-icon.svg" alt="React Logo">
+        <img src="img/Logos/HTML5.svg" alt="HTML5 Logo">
+        <img src="img/Logos/CSS3.svg" alt="CSS3 Logo">
+        <img src="img/Logos/JavaScript.svg" alt="JavaScript Logo">
+      </div>
     </div>
     <div class="project card">
-      <p>Project4</p>
+      <div class="project-title">
+        <img class="project-logo"
+          src="img/ProjectLogos/portfolio-rebalance-logo.webp"
+          src="img/ProjectLogos/portfolio-rebalance-logo.png"
+          alt="db-todo logo">
+        <h4 class="card-title">Portfolio Rebalancer</h4>
+      </div>
+      <div class="project-links">
+        <div class="project-link btn">
+          <a href="https://github.com/dboydgit/portfolio-rebalancer" target="_blank" rel="noopener noreferrer">
+            <span>View Code</span>
+            <img class="btn-img" src="img/Logos/GitHub-Mark-Light-64px.png" alt="github mark light">
+          </a>
+        </div>
+        <div class="project-link btn">
+          <a href="https://portfolio-rebalance.appspot.com/" target="_blank" rel="noopener noreferrer">
+            <span>Live Demo</span>
+            <span class="material-icons md-24 btn-img">open_in_new</span>
+          </a>
+        </div>
+      </div>
+      <div class="card-text">
+        <h5 class="text-med card-subtitle">Description</h5>
+        <p class="text-med project-description">
+          This application allows the user to input stock portfolio allocations 
+          and outputs the amounts needed to purchase to rebalance the portfolio to the target 
+          allocations. The app uses AngularJS for the front end and persists data locally 
+          using the browsers localStorage API. The app is hosted on Google App Engine and 
+          uses and AWS Lambda function to retreive stock prices from a stock price API.
+        </p>
+      </div>
+      <div class="project-tech">
+        <img src="img/Logos/angular.svg" alt="AngularJS Logo">
+        <img src="img/Logos/HTML5.svg" alt="HTML5 Logo">
+        <img src="img/Logos/CSS3.svg" alt="CSS3 Logo">
+        <img src="img/Logos/JavaScript.svg" alt="JavaScript Logo">
+        <img src="img/Logos/google-cloud.svg" alt="Google Cloud Logo">
+        <img src="img/Logos/Amazon_Web_Services_Logo.svg" alt="AWS Logo">
+      </div>
     </div>
   </div>
   <h2 class="section-heading">Education</h2>
