Change h tags to p tags in project cards

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class="project card">
       <div class="project-title">
         <img class="project-logo" src="img/ProjectLogos/ult-stats-logo.svg" alt="ulti stats logo">
-        <h4 class="card-title">Ulti Stats</h4>
+        <p class="card-title">Ulti Stats</p>
       </div>
       <div class="project-links">
         <div class="project-link btn">
@@ -179,7 +179,7 @@
         </div>
       </div>
       <div class="card-text">
-        <h5 class="text-med card-subtitle">Description</h5>
+        <p class="text-med card-subtitle">Description</p>
         <p class="text-med project-description">
           Ulti Stats is a progressive web application made for tracking statistics
           during <a href="https://en.wikipedia.org/wiki/Ultimate_(sport)">Ultimate</a> games.
@@ -199,7 +199,7 @@
     <div class="project card">
       <div class="project-title">
         <img class="project-logo" src="img/ProjectLogos/db-todo-logo.png" alt="db-todo logo">
-        <h4 class="card-title">dboydgit To-Do</h4>
+        <p class="card-title">dboydgit To-Do</p>
       </div>
       <div class="project-links">
         <div class="project-link btn">
@@ -216,7 +216,7 @@
         </div>
       </div>
       <div class="card-text">
-        <h5 class="text-med card-subtitle">Description</h5>
+        <p class="text-med card-subtitle">Description</p>
         <p class="text-med project-description">
           This progressive web application is my version of a modern To-Do list app. This 
           web app syncs instantly between devices using a Google Firestore database. 
@@ -237,7 +237,7 @@
     <div class="project card">
       <div class="project-title">
         <img class="project-logo" src="img/ProjectLogos/dice-score-logo.png" alt="dice-score logo">
-        <h4 class="card-title">Dice Scoresheets</h4>
+        <p class="card-title">Dice Scoresheets</p>
       </div>
       <div class="project-links">
         <div class="project-link btn">
@@ -254,7 +254,7 @@
         </div>
       </div>
       <div class="card-text">
-        <h5 class="text-med card-subtitle">Description</h5>
+        <p class="text-med card-subtitle">Description</p>
         <p class="text-med project-description">
           This web app was my first time working with React. The app is a simple 
           <a href="https://en.wikipedia.org/wiki/Yahtzee">Yahtzee</a> scoresheet for up to 8 players. I also integrated some elements of
@@ -274,7 +274,7 @@
           src="img/ProjectLogos/portfolio-rebalance-logo.webp"
           src="img/ProjectLogos/portfolio-rebalance-logo.png"
           alt="db-todo logo">
-        <h4 class="card-title">Portfolio Rebalancer</h4>
+        <p class="card-title">Portfolio Rebalancer</p>
       </div>
       <div class="project-links">
         <div class="project-link btn">
@@ -291,7 +291,7 @@
         </div>
       </div>
       <div class="card-text">
-        <h5 class="text-med card-subtitle">Description</h5>
+        <p class="text-med card-subtitle">Description</p>
         <p class="text-med project-description">
           This application allows the user to input stock portfolio allocations 
           and outputs the amounts needed to purchase to rebalance the portfolio to the target 
