--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p>Have a look at some of my work and learn a little about me below.</p>
       </div>
     </div>
-  
+
     <h2 class="section-heading">Technologies</h2>
     <h3 class="sub-heading">Worked with in recent projects...</h3>
     <div class="skill-grid">
@@ -185,7 +185,7 @@
           <p class="text-med project-description">
             Ulti Stats is a progressive web application made for tracking statistics
             during <a href="https://en.wikipedia.org/wiki/Ultimate_(sport)">Ultimate</a> games.
-            This was my most ambitious personal project to date, with a large and fast changing 
+            This was my most ambitious personal project to date, with a large and fast changing
             application state. Ulti Stats was built using React for the front end and Google Firebase for a
             serverless backend and hosting.
           </p>
@@ -220,10 +220,10 @@
         <div class="card-text">
           <p class="text-med card-subtitle">Description</p>
           <p class="text-med project-description">
-            This progressive web application is my version of a modern To-Do list app. This 
-            web app syncs instantly between devices using a Google Firestore database. 
-            Originally built with PouchDB and CouchDB for syncing 
-            and NodeJS with Express for authentication. I recently refactored the app to 
+            This progressive web application is my version of a modern To-Do list app. This
+            web app syncs instantly between devices using a Google Firestore database.
+            Originally built with PouchDB and CouchDB for syncing
+            and NodeJS with Express for authentication. I recently refactored the app to
             work with Google Firebase for database, authentication, and hosting.
           </p>
         </div>
@@ -258,8 +258,9 @@
         <div class="card-text">
           <p class="text-med card-subtitle">Description</p>
           <p class="text-med project-description">
-            This web app was my first time working with React. The app is a simple 
-            <a href="https://en.wikipedia.org/wiki/Yahtzee">Yahtzee</a> scoresheet for up to 8 players. I also integrated some elements of
+            This web app was my first time working with React. The app is a simple
+            <a href="https://en.wikipedia.org/wiki/Yahtzee">Yahtzee</a> scoresheet for up to 8 players. I also
+            integrated some elements of
             the material design framework <a href="https://material-ui.com/">Material-UI</a>.
           </p>
         </div>
@@ -272,10 +273,8 @@
       </div>
       <div class="project card">
         <div class="project-title">
-          <img class="project-logo"
-            src="img/ProjectLogos/portfolio-rebalance-logo.webp"
-            src="img/ProjectLogos/portfolio-rebalance-logo.png"
-            alt="db-todo logo">
+          <img class="project-logo" src="img/ProjectLogos/portfolio-rebalance-logo.webp"
+            src="img/ProjectLogos/portfolio-rebalance-logo.png" alt="db-todo logo">
           <p class="card-title">Portfolio Rebalancer</p>
         </div>
         <div class="project-links">
@@ -295,10 +294,10 @@
         <div class="card-text">
           <p class="text-med card-subtitle">Description</p>
           <p class="text-med project-description">
-            This application allows the user to input stock portfolio allocations 
-            and outputs the amounts needed to purchase to rebalance the portfolio to the target 
-            allocations. The app uses AngularJS for the front end and persists data locally 
-            using the browsers localStorage API. The app is hosted on Google App Engine and 
+            This application allows the user to input stock portfolio allocations
+            and outputs the amounts needed to purchase to rebalance the portfolio to the target
+            allocations. The app uses AngularJS for the front end and persists data locally
+            using the browsers localStorage API. The app is hosted on Google App Engine and
             uses and AWS Lambda function to retreive stock prices from a stock price API.
           </p>
         </div>
@@ -313,7 +312,56 @@
       </div>
     </div>
     <h2 class="section-heading">Education</h2>
-    <h2 class="section-heading">Personal</h2>
+    <div class="edu-section">
+      <div class="edu-card card">
+        <div class="edu-heading">
+          <div class="icon"><span class="material-icons md-32">code</span></div>
+          <div class="card-title">Web Development</div>
+        </div>
+        <div class="edu-content">
+          <div class="edu-text">
+            <div class="card-subtitle text-med">Self Directed</div>
+            <p class="text-med">The majority of my web development learning has been done through
+              self study and completing projects. When working through probelems I always start at the official
+              documentation for the tool I am using and branch out to other sources if I need more insight.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="edu-card card">
+        <div class="edu-heading">
+          <div class="icon"><span class="material-icons md-32">code</span></div>
+          <div class="card-title">Web Development</div>
+        </div>
+        <div class="edu-content">
+          <div class="edu-text">
+            <div class="card-subtitle text-med">Online Courses</div>
+            <p class="text-med">As well as learning through my personal projects I have completed several online Courses
+              and tutorials. Including <a href="https://java-programming.mooc.fi/">University of Helsinki Java</a>
+              <abbr title="massive open online course">MOOC</abbr>, <a
+                href="https://www.freecodecamp.org/dboydgit">FreeCodeCamp</a>
+              (8 total certifications), <a
+                href="https://www.edx.org/course/cs50s-introduction-to-computer-science">Harvard's CS50</a>
+              Online Course, as well as other online tuturials and courses.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="edu-card card">
+        <div class="edu-heading">
+          <div class="icon"><span class="material-icons md-32">school</span></div>
+          <div class="card-title">Formal Education</div>
+        </div>
+        <div class="edu-text ta-center">
+          <div class="card-subtitle text-med">P.Eng, Alberta</div>
+          <div class="text-med">Professional Engineer Registered in Alberta</div>
+          <div class="card-subtitle text-med">B.Sc. Civil Enginerring</div>
+          <div class="text-med">University of Glasgow, Scotland</div>
+          <div class="card-subtitle text-med">Post Graduate Diploma in Education (PGDE)</div>
+          <div class="text-med">University of Strathclyde, Scotland</div>
+        </div>
+      </div>
+    </div>
 
   </div>
   <!-- Scripts -->
