Fix spelling errors

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Personal Site for Derryk Boyd, @dboydgit</title>
-  <meta name="description" content="Personal site for Derryk Boyd - @dboytgit">
+  <meta name="description" content="Personal site for Derryk Boyd - @dboydgit">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="Personal Site for @dboydgit">
@@ -47,7 +47,8 @@
       </div>
       <img id="hi-bitmoji" alt="profile-hi" src="img/DB-Hi-Bitmoji.webp" src="img/DB-Hi-Bitmoji.png" />
       <div class="hero-text">
-        <p>Thanks for checking out my site.</p>
+        <p>I'm Derryk.</p>
+        <p>I am an aspiring front end web developer and I am currently living in Edmonton, AB Canada.</p>
         <p>Have a look at some of my work and learn a little about me below.</p>
       </div>
     </div>
@@ -259,7 +260,7 @@
           <p class="text-med card-subtitle">Description</p>
           <p class="text-med project-description">
             This web app was my first time working with React. The app is a simple
-            <a href="https://en.wikipedia.org/wiki/Yahtzee">Yahtzee</a> scoresheet for up to 8 players. I also
+            <a href="https://en.wikipedia.org/wiki/Yahtzee">Yahtzee</a> score sheet for up to 8 players. I also
             integrated some elements of
             the material design framework <a href="https://material-ui.com/">Material-UI</a>.
           </p>
@@ -298,7 +299,7 @@
             and outputs the amounts needed to purchase to rebalance the portfolio to the target
             allocations. The app uses AngularJS for the front end and persists data locally
             using the browsers localStorage API. The app is hosted on Google App Engine and
-            uses and AWS Lambda function to retreive stock prices from a stock price API.
+            uses and AWS Lambda function to retrieve stock prices from a stock price API.
           </p>
         </div>
         <div class="project-tech">
@@ -322,7 +323,7 @@
           <div class="edu-text">
             <div class="card-subtitle text-med">Self Directed</div>
             <p class="text-med">The majority of my web development learning has been done through
-              self study and completing projects. When working through probelems I always start at the official
+              self study and completing projects. When working through problems I always start at the official
               documentation for the tool I am using and branch out to other sources if I need more insight.
             </p>
           </div>
@@ -342,7 +343,7 @@
                 href="https://www.freecodecamp.org/dboydgit">FreeCodeCamp</a>
               (8 total certifications), <a
                 href="https://www.edx.org/course/cs50s-introduction-to-computer-science">Harvard's CS50</a>
-              Online Course, as well as other online tuturials and courses.
+              Online Course, as well as other online tutorials and courses.
             </p>
           </div>
         </div>
@@ -355,7 +356,7 @@
         <div class="edu-text ta-center">
           <div class="card-subtitle text-med">P.Eng, Alberta</div>
           <div class="text-med">Professional Engineer Registered in Alberta</div>
-          <div class="card-subtitle text-med">B.Sc. Civil Enginerring</div>
+          <div class="card-subtitle text-med">B.Sc. Civil Engineering</div>
           <div class="text-med">University of Glasgow, Scotland</div>
           <div class="card-subtitle text-med">Post Graduate Diploma in Education (PGDE)</div>
           <div class="text-med">University of Strathclyde, Scotland</div>
