Add navigation links for desktop

--- a/index.html
+++ b/index.html
@@ -31,12 +31,19 @@
     <div class="nav-content">
       <h1 class="nav-title">Derryk Boyd, P.Eng.</h1>
       <div class="nav-links">
-        <a href="https://github.com/dboydgit/" target="_blank" rel="noopener noreferrer">
-          <img class="social-link" src="img/Logos/GitHub-Mark-64px.png" alt="social-github" />
-        </a>
-        <a href="https://www.linkedin.com/in/derrykboyd/" target="_blank" rel="noopener noreferrer">
-          <img class="social-link" src="/img/Logos/LinkedIn-Mark.png" alt="social-linkedIn" />
-        </a>
+        <div class="nav-page-links">
+          <a href="#tech" class="nav-link">Tech</a>
+          <a href="#projects" class="nav-link">Projects</a>
+          <a href="#education" class="nav-link">Education</a>
+        </div>
+        <div class="nav-social-links">
+          <a href="https://github.com/dboydgit/" target="_blank" rel="noopener noreferrer">
+            <img class="social-link" src="img/Logos/GitHub-Mark-64px.png" alt="social-github" />
+          </a>
+          <a href="https://www.linkedin.com/in/derrykboyd/" target="_blank" rel="noopener noreferrer">
+            <img class="social-link" src="/img/Logos/LinkedIn-Mark.png" alt="social-linkedIn" />
+          </a>
+        </div>
       </div>
     </div>
   </nav>
@@ -53,7 +60,7 @@
       </div>
     </div>
 
-    <h2 class="section-heading">Technologies</h2>
+    <h2 id="tech" class="section-heading">Technologies</h2>
     <h3 class="sub-heading">Worked with in recent projects...</h3>
     <div class="skill-grid">
       <div class="skill">
@@ -160,7 +167,7 @@
         </div>
       </div>
     </div>
-    <h2 class="section-heading">Projects</h2>
+    <h2 id="projects" class="section-heading">Projects</h2>
     <div class="project-grid">
       <div class="project card">
         <div class="project-title">
@@ -312,7 +319,7 @@
         </div>
       </div>
     </div>
-    <h2 class="section-heading">Education</h2>
+    <h2 id="education" class="section-heading">Education</h2>
     <div class="edu-section">
       <div class="edu-card card">
         <div class="edu-heading">
