--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html id="top" class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -29,7 +29,7 @@
   <!-- Add your site or application content here -->
   <nav>
     <div class="nav-content">
-      <h1 class="nav-title">Derryk Boyd, P.Eng.</h1>
+      <a href="#top" class="nav-title">Derryk Boyd, P.Eng.</a>
       <div class="nav-links">
         <div class="nav-page-links">
           <a href="#tech" class="nav-link">Tech</a>
@@ -60,7 +60,7 @@
       </div>
     </div>
 
-    <h2 id="tech" class="section-heading">Technologies</h2>
+    <h2 id="tech" class="section-heading anchor">Technologies</h2>
     <h3 class="sub-heading">Worked with in recent projects...</h3>
     <div class="skill-grid">
       <div class="skill">
@@ -167,7 +167,7 @@
         </div>
       </div>
     </div>
-    <h2 id="projects" class="section-heading">Projects</h2>
+    <h2 id="projects" class="section-heading anchor">Projects</h2>
     <div class="project-grid">
       <div class="project card">
         <div class="project-title">
@@ -319,7 +319,7 @@
         </div>
       </div>
     </div>
-    <h2 id="education" class="section-heading">Education</h2>
+    <h2 id="education" class="section-heading anchor">Education</h2>
     <div class="edu-section">
       <div class="edu-card card">
         <div class="edu-heading">
