Add bottom nav mobile

--- a/index.html
+++ b/index.html
@@ -46,11 +46,37 @@
         </div>
       </div>
     </div>
+    <div class="btm-nav">
+      <a href="#top" class="btm-nav-item btm-nav-link active">
+        <div class="btm-nav-content">
+          <span class="material-icons">person</span>
+          <span>Me</span>
+        </div>
+      </a>
+      <a href="#tech" class="btm-nav-item btm-nav-link">
+        <div class="btm-nav-content">
+          <span class="material-icons">devices</span>
+          <span>Tech</span>
+        </div>
+      </a>
+      <a href="#projects" class="btm-nav-item btm-nav-link">
+        <div class="btm-nav-content">
+          <span class="material-icons">assignment</span>
+          <span>Projects</span>
+        </div>
+      </a>
+      <a href="#education" class="btm-nav-item btm-nav-link">
+        <div class="btm-nav-content">
+          <span class="material-icons">school</span>
+          <span>Education</span>
+        </div>
+      </a>
+    </div>
   </nav>
   <div class="content">
     <div class="hero">
       <div>
-        <p class='hero-text typewriter'>Hi there 🙂</p>
+        <p class='hero-text typewriter'>Hello  👋👋</p>
       </div>
       <img id="hi-bitmoji" alt="profile-hi" src="img/DB-Hi-Bitmoji.webp" src="img/DB-Hi-Bitmoji.png" />
       <div class="hero-text">
