--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
   <div class="content">
     <div class="hero">
       <div>
-        <p class='hero-text typewriter'>Hello  👋👋</p>
+        <p class='hero-text typewriter'>Hello. Bonjour.</p>
       </div>
-      <img id="hi-bitmoji" alt="profile-hi" src="img/DB-Hi-Bitmoji.webp" src="img/DB-Hi-Bitmoji.png" />
+      <img id="profile-img" alt="profile-img" src="img/DerrykBoyd-Headshot.webp" src="img/DerrykBoyd-Headshot.jpg" />
       <div class="hero-text">
         <p>I'm Derryk.</p>
         <p>I am an aspiring front end web developer and I am currently living in Edmonton, AB Canada.</p>
@@ -395,6 +395,12 @@
           <div class="text-med">University of Strathclyde, Scotland</div>
         </div>
       </div>
+    </div>
+    <div class="footer">
+      <span class="credits">Developed by Derryk Boyd</span>
+      <a class="btn resume-dl" href="assets/test-resume.pdf" download>
+        Résumé<span class="material-icons md-24 btn-img">save_alt</span>
+      </a>
     </div>
 
   </div>
