Add social link to credits

--- a/index.html
+++ b/index.html
@@ -397,7 +397,12 @@
       </div>
     </div>
     <div class="footer">
-      <span class="credits">Developed by Derryk Boyd</span>
+      <div class="credits">
+        <span>Developed by Derryk Boyd</span>
+        <a href="https://github.com/dboydgit/" target="_blank" rel="noopener noreferrer">
+          <img class="social-link" src="img/Logos/GitHub-Mark-64px.png" alt="social-github" />
+        </a>
+      </div>
       <a class="btn resume-dl" href="assets/test-resume.pdf" download>
         Résumé<span class="material-icons md-24 btn-img">save_alt</span>
       </a>
