Remove open graph image

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <meta name="description" content="Personal site for Derryk Boyd - @dboydgit">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="Personal Site for @dboydgit">
+  <meta property="og:title" content="Personal Site for Derryk Boyd - @dboydgit">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://dboydgit.github.io/portfolio/">
-  <meta property="og:image" content="img/icon-512x512.png">
 
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="site.webmanifest">
