--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
       <div>
         <p class='hero-text typewriter'>Hello. Bonjour.</p>
       </div>
-      <img id="profile-img" alt="profile-img" src="img/DerrykBoyd-Headshot.webp" src="img/DerrykBoyd-Headshot.jpg" />
+      <div class="profile-img-container">
+        <img id="profile-img" alt="profile-img" src="img/DerrykBoyd-Headshot.webp" src="img/DerrykBoyd-Headshot.jpg" />
+        <a class="btn resume-dl" href="assets/Derryk Boyd-Resume-Dev-2020-07.pdf" download>
+          Résumé<span class="material-icons md-24 btn-img">save_alt</span>
+        </a>
+      </div>
       <div class="hero-text">
         <p>I'm Derryk.</p>
         <p>I am an aspiring front end web developer and I am currently living in Edmonton, AB Canada.</p>
@@ -402,9 +407,6 @@
           <img class="social-link" src="img/Logos/GitHub-Mark-64px.png" alt="social-github" />
         </a>
       </div>
-      <a class="btn resume-dl" href="assets/test-resume.pdf" download>
-        Résumé<span class="material-icons md-24 btn-img">save_alt</span>
-      </a>
     </div>
 
   </div>
